# compgraph

./: .coderabbit.yaml  .env.example  .gitignore  .mcp.json  AGENTS.md  BUG_TRACKING_TEMPLATE.md  CLAUDE.md  GEMINI.md  PR84_CODE_REVIEW_FINDINGS.md  REVIEW_SUMMARY.txt  openapi.json  package-lock.json  pyproject.toml  skills-lock.json
.agents/: .skill-lock.json
.claude/: settings.json  settings.local.json
.cursor/: settings.json
.github/: pull_request_template.md
alembic/: env.py
docs/: COMPGRAPH_PROJECT_CONTEXT.md  changelog.md  cheat-sheet.md  ci.md  competitor-careers.md  compgraph-product-spec.md  context-packs.md  design.md  failure-patterns.md  git-github-cheatsheet.md  parallel-development-playbook.md  phases.md  secrets-reference.md  workflow.md
eval/: .env.example  .gitignore  CLAUDE.md  elo.py  pyproject.toml  schemas.py
eval/docs/plans/: 2026-02-21-auto-deploy-hook-plan.md  2026-02-21-eval-api-wiring-design.md  2026-02-21-eval-api-wiring-plan.md  2026-02-21-pi-deployment-plan.md  2026-02-22-p3-backlog.md  2026-02-22-ux-improvements.md
eval/eval/: api.py  config.py  ground_truth.py  providers.py  runner.py  store.py  validator.py
eval/eval/prompts/: __init__.py  pass1_v1.py  pass2_v1.py
eval/eval/ui/: components.py
eval/eval/ui/pages/: 1_Run_Tests.py  2_Review.py  3_Leaderboard.py  4_Accuracy_Review.py  5_Prompt_Diff.py
eval/infra/: Caddyfile  compgraph-eval-api.service  compgraph-eval.service  deploy-eval-pi.sh
eval/scripts/: analyze_errors.py  dev.sh  prompt_diff.py  run_batch.py  setup-hooks.sh
eval/scripts/hooks/: pre-commit  pre-push
eval/tests/: test_api.py  test_e2e.py  test_elo.py  test_ground_truth.py  test_prompts.py  test_runner.py  test_store.py  test_store_reviews.py  test_validator.py
eval/ui/: app.py
eval/ui/pages/: 2_Review.py
eval/web/: package-lock.json  package.json  vitest.config.ts
eval/web/docs/plans/: 2026-02-21-tremor-adoption-design.md
eval/web/src/__tests__/helpers/: mocks.ts  render.tsx
eval/web/src/app/: layout.tsx  page.tsx
eval/web/src/app/__tests__/: page.test.tsx
eval/web/src/app/accuracy/: page.tsx
eval/web/src/app/accuracy/__tests__/: page.test.tsx
eval/web/src/app/leaderboard/: page.tsx
eval/web/src/app/leaderboard/__tests__/: page.test.tsx
eval/web/src/app/prompt-diff/: page.tsx
eval/web/src/app/prompt-diff/__tests__/: page.test.tsx
eval/web/src/app/review/: page.tsx
eval/web/src/app/runs/: page.tsx
eval/web/src/app/runs/__tests__/: page.test.tsx
eval/web/src/app/settings/: page.tsx
eval/web/src/app/settings/__tests__/: page.test.tsx
eval/web/src/components/: app-shell.tsx  data-table.tsx  error-box.tsx  status-badge.tsx
eval/web/src/components/__tests__/: app-shell.test.tsx  data-table.test.tsx  header.test.tsx  sidebar.test.tsx  status-badge.test.tsx  theme-toggle.test.tsx
eval/web/src/components/ui/: area-chart.tsx  badge.tsx  bar-chart.tsx  donut-chart.tsx  progress-bar.tsx  progress-circle.tsx  tracker.tsx
eval/web/src/lib/: api-client.ts  chart-utils.ts  mock-data.ts  run-utils.ts
eval/web/src/lib/__tests__/: api-client.test.ts  constants.test.ts  mock-data.test.ts
infra/: Caddyfile  deploy-ci.sh  deploy.sh  redis-setup.sh  setup-droplet.sh
scripts/: backfill_embeddings.py  backfill_enrichment.py  backfill_geocoding.py  backfill_title_normalization.py  check-design-tokens.sh  data_quality_review.py  dedup_brands.py  dump_openapi.py  export_corpus.py  generate_eval_corpus.py  investigate_eval_data.py  orchestrator.sh  playwright-smoke.sh  populate_markets.py  preflight_check.py  process-issue.sh  rls_policies.sql  seed_location_mappings.py  setup-hooks.sh  validate_enrichment.py
skills/: frontend-code-review
supabase/: config.toml
tests/: conftest.py  helpers.py  test_agg_agency_overlap.py  test_agg_brand_churn.py  test_agg_brand_timeline.py  test_agg_coverage_gaps.py  test_agg_daily_velocity.py  test_agg_pay_benchmarks.py  test_agg_posting_lifecycle.py  test_aggregation_base.py  test_aggregation_coverage_gaps.py  test_aggregation_daily_velocity.py  test_aggregation_helpers.py  test_aggregation_orchestrator.py  test_aggregation_posting_lifecycle.py  test_alembic_config.py  test_api_aggregation.py  (+61 more)
(+466 files in other folders)
