[project]
name = "compgraph"
version = "0.1.0"
description = "Competitive intelligence platform for field marketing agencies"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.43.0",
    "rapidfuzz>=3.0.0",
    "python-slugify>=8.0.0",
"apscheduler>=4.0.0a1",
    "PyJWT>=2.8.0",
    "email-validator>=2.1.0",
    "sentry-sdk[anthropic,fastapi]>=2.19.0",
]

[project.scripts]
compgraph = "compgraph.__main__:main"
preflight = "compgraph.preflight:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.9.0",
    "mypy>=1.19.1",
    "sqlalchemy[mypy]>=2.0.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compgraph"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade (modern Python syntax)
    "S",     # bandit (security)
    "B",     # bugbear (common pitfalls)
    "A",     # builtins shadowing
    "T20",   # print statements
    "RUF",   # ruff-specific rules
    "ASYNC", # async linting
]
ignore = [
    "S101",  # assert is fine in tests
    "S104",  # binding to 0.0.0.0 is intentional (LAN dev server)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108", "E501"]
"scripts/**/*.py" = ["T20", "E501"]
"src/compgraph/enrichment/prompts.py" = ["E501"]
"src/compgraph/preflight.py" = ["S603", "S607", "T20"]
"alembic/versions/**/*.py" = ["E501", "UP007", "UP035", "I001", "W291", "S608"]
"src/compgraph/aggregation/coverage_gaps.py" = ["S608"]
"src/compgraph/aggregation/pay_benchmarks.py" = ["S608"]
"eval/eval/ui/pages/*.py" = ["S311"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual adoption — tighten later
check_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-m 'not integration' --cov=compgraph --cov-report=term-missing --cov-fail-under=50"
markers = [
    "integration: requires live database connection",
]
