[project]
name = "compgraph-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.50",
    "streamlit>=1.40",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
export = [
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.9",
]

[project.scripts]
eval-export = "scripts.export_corpus:main"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
